# GoodPlayMusicPlayer

./: .gitignore  CMakeLists.txt  README.md
qml/: Main.qml
qml/components/: ActionButton.qml  GlassPanel.qml  MediaSlider.qml  SpectrumRing.qml  TitleBarButton.qml
resources/: app_resources.qrc
src/: ImportScanWorker.cpp  ImportScanWorker.h  MusicPlayerController.cpp  MusicPlayerController.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  TrackImportUtils.cpp  TrackImportUtils.h  TrackListModel.cpp  TrackListModel.h  main.cpp
